# cuHE

cuhe/: Base.cu  Base.h  CMakeLists.txt  CuHE.cu  CuHE.h  Debug.h  DeviceManager.cu  DeviceManager.h  Makefile  ModP.h  Operations.cu  Operations.h  Parameters.cu  Parameters.h
cuhe/core/: Base.cu  Base.h  CMakeLists.txt  CuHE.cu  CuHE.h  Debug.h  DeviceManager.cu  DeviceManager.h  ModP.h  Operations.cu  Operations.h  Parameters.cu  Parameters.h  Relinearization.cu  Relinearization.h
docker/: Dockerfile  manage.sh
examples/DHS/: CMakeLists.txt  DHS.cu  DHS.h  Makefile  simple_DHS.cu  test.cu
examples/Prince/: DHS.cu  DHS.h  Makefile  Prince.cu  Timer.cu
examples/jDHS/: CMakeLists.txt  eu_unicredit_cuHE_jcuHE.h  jcuHE.cc  jdhsMain
tests/: test_ntt.cu
